# bigram-nes

./: .gitignore  LICENSE  NOTICE  README.md
dev/: README.md
dev/lib/: crt0.s
dev/src/: T_matrix.h  gen.c
dev/utils/: compare_folders.py  dat_to_bin.py  extract_chr_rom.py  find_binary_offsets.py  find_matching_roms.py  matching_roms.txt  offsets_dw_03  offsets_dw_chr  offsets_ff  seek_data.sh  seek_data_dw.sh  seek_data_ff.sh
dw/: README.md  build.bat  build.sh  credits.txt  dw.md5  extract.bat  extract.sh
dw/asm/: Bank00.asm  Bank01.asm  Bank02.asm  Bank03.asm  Defines.inc  Header.asm  T_matrix_0_23.asm  T_matrix_24_26.asm  dat_to_bin.py  header.cfg  nes.cfg  prg_bank.cfg
dw/rhdn/: README.md
dw/scripts/: check_limits.sh  extract_from_rom.py  offsets_00  offsets_01  offsets_02
ff1/: README.md  build.bat  build.sh  extract.bat  extract.sh  ff1.md5
ff1/asm/: T_matrix.asm  bank_0C.asm  bank_0D.asm  bank_0E.asm  bank_0F.asm  inference.asm  nes.cfg  variables.inc
ff1/rhdn/: README.md
ff1/scripts/: check_limits.ps1  check_limits.sh  extract_from_rom.py
model/: bigram.py  demo.ipynb  pyproject.toml  train.py
model/data/: pokemon_names.txt
vanilla/: README.md  build.bat  build.sh
vanilla/src/: gen.c
